[gd_scene load_steps=22 format=3 uid="uid://c4gtobtru7t2v"]

[ext_resource type="Script" path="res://Scripts/Characters/Villains/Cocodaemon.gd" id="1_1xwuk"]
[ext_resource type="Texture2D" uid="uid://q1i23e5egcbo" path="res://Assets/Characters/Villains/Cacodaemon Sprite Sheet.png" id="1_cdsgd"]
[ext_resource type="Texture2D" uid="uid://ckd1mtuus8hmb" path="res://Assets/Items/Props/healthbarProgress.png" id="2_s84fh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8277e"]
atlas = ExtResource("1_cdsgd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpqu8"]
atlas = ExtResource("1_cdsgd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcy7l"]
atlas = ExtResource("1_cdsgd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb7oi"]
atlas = ExtResource("1_cdsgd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_somcj"]
atlas = ExtResource("1_cdsgd")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rft5d"]
atlas = ExtResource("1_cdsgd")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fg84o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8277e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpqu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcy7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb7oi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_somcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rft5d")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_meefg"]
size = Vector2(48, 40)

[sub_resource type="Animation" id="Animation_i5qin"]
resource_name = "Die"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3)]
}

[sub_resource type="Animation" id="Animation_o5mst"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_g53k6"]
resource_name = "Walk"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_83c3p"]
_data = {
"Die": SubResource("Animation_i5qin"),
"RESET": SubResource("Animation_o5mst"),
"Walk": SubResource("Animation_g53k6")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mhcmk"]
animation = &"Die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jlls0"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_01jqm"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v1kjb"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_kg687"]
states/Die/node = SubResource("AnimationNodeAnimation_mhcmk")
states/Die/position = Vector2(606.5, 100.5)
states/Walk/node = SubResource("AnimationNodeAnimation_jlls0")
states/Walk/position = Vector2(416, 100)
transitions = ["Start", "Walk", SubResource("AnimationNodeStateMachineTransition_01jqm"), "Walk", "Die", SubResource("AnimationNodeStateMachineTransition_v1kjb")]

[sub_resource type="CircleShape2D" id="CircleShape2D_mo0ii"]
radius = 88.0

[node name="Cocodaemon" type="CharacterBody2D"]
scale = Vector2(-1, 1)
collision_layer = 13
collision_mask = 13
script = ExtResource("1_1xwuk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -1)
scale = Vector2(0.65625, 0.625)
sprite_frames = SubResource("SpriteFrames_fg84o")
autoplay = "default"
frame = 5
frame_progress = 0.548083
flip_h = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_cdsgd")
hframes = 8
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_meefg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_83c3p")
}
autoplay = "Walk"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_kg687")
anim_player = NodePath("../AnimationPlayer")

[node name="CocodaemonLife" type="TextureProgressBar" parent="."]
offset_left = -19.0
offset_top = -22.0
offset_right = 45.0
offset_bottom = -12.0
scale = Vector2(0.6, 0.6)
value = 100.0
texture_progress = ExtResource("2_s84fh")

[node name="DetectionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_mo0ii")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
